@@ -1133,7 +1133,7 @@ Hash de su clave pública: </translation>
     </message>
     <message>
         <location filename="../../src/httpbrokerclient.cpp" line="144"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
         <translation>La clave de equipo para esta servidor no se encontró o se encontró otro tipo. Un atacante podría haber cambiado la clave por defecto del servidor para engañar al cliente pensando que la clave no existe todavía.</translation>
     </message>
     <message>
@@ -2554,7 +2554,7 @@ Por razones de seguridad se recomienda finalizar el intento de conexión.
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="3090"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
 For security reasons, it is recommended to stop the connection attempt.
 Do you want to terminate the connection?
 </source>
