@@ -1103,7 +1103,7 @@ Tema avaliku võtme &apos;hash&apos; on:</translation>
     </message>
     <message>
         <location filename="../../src/httpbrokerclient.cpp" line="144"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
         <translation>Serveri võtit ei leitud, aga leidus muu võti. Mõni häkker võib olla vahetanud oletusvõtme üritades petta kaugkasutajat et viimane arvaks, et võtit veel ei ole.</translation>
     </message>
     <message>
@@ -1772,7 +1772,7 @@ Kas Sa soovid ühenduse katkestada?
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="3090"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
 For security reasons, it is recommended to stop the connection attempt.
 Do you want to terminate the connection?
 </source>
