@@ -1122,7 +1122,7 @@ Julkinen avain: </translation>
     </message>
     <message>
         <location filename="../../src/httpbrokerclient.cpp" line="144"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.</source>
         <translation>Palvelimen tunnistusavainta ei löydy mutta toisenlainen löytyy. Hyökkääjä on ehkä vaihtanut oletusavaimen uskotallakseen asiakasohjelmallesi että avainta ei vielä ole.</translation>
     </message>
     <message>
@@ -1795,7 +1795,7 @@ Halutako katkaista yhteyden?
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="3090"/>
-        <source>The host key for this server was not found but anothertype of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
+        <source>The host key for this server was not found but another type of key exists. An attacker might have changed the default server key to trick your client into thinking the key does not exist yet.
 For security reasons, it is recommended to stop the connection attempt.
 Do you want to terminate the connection?
 </source>
